# pathfinder-wotr-editor

./: .gitattributes  Cargo.toml  README.md  build.rs  characters.txt
.github/workflows/: rust.yml
assets/: app.afphoto
samples/: .gitignore  Manual_120_Kenabres_Square__14_Gozran__IV__4710__12_01_52.zks  Manual_120_Kenabres_Square__14_Gozran__IV__4710__12_01_52__Copy.zks  Manual_121_Underground_Caves_of_Kenabres__14_Gozran__IV__4710__12_07_44.zks  Manual_17____27_Gozran__IV__4710___11_43_08.zks  Manual_19_Crusader_s_Camp___28_Gozran__IV__4710___03_14_37.zks  Manual_20_World___28_Gozran__IV__4710___03_14_41.zks  Manual_21_Kenabres_Square___14_Gozran__IV__4710___12_03_45.zks  Manual_21_Kenabres_Square___14_Gozran__IV__4710___12_03_45__Copy.zks  Manual_28_Defender_s_Heart___16_Gozran__IV__4710___07_10_32.zks  Manual_3_Gray_Garrison__16_Arodus__VIII__4715__06_55_49.zks  Manual_45_Wintersun__19_Lamashan__X__4715__08_36_14.zks  colors.scss  extract.sh  header.json  kaylin.json  party.json  player.json
scripts/: name_generator.py
src/: character_view.rs  character_widget.rs  data.rs  dialog.rs  editor_widget.rs  json.rs  labelled_input_number.rs  loader.rs  main.rs  player_widget.rs  styles.rs  theme.rs  widgets.rs
src/data/: names.rs
src/save/: loading.rs  mod.rs  saving.rs
src/widgets/: alignment.rs  character.rs  editor.rs  input.rs  mod.rs  player.rs
