[package]
name = "pathfinder-wotr-editor"
version = "0.2.0"
authors = ["Francois"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.4", features = ["tokio", "canvas", "pure"] }
iced_native = { version = "0.5", features = [] }
iced_lazy = { version = "0.1", features = ["pure"] }
iced_pure = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tinyfiledialogs = "3.9"
tokio = { version = "1", features = ["fs", "macros"] }
dirs = "4.0"
async-trait = "0.1"
futures = "0.3"
zip = "0.6"
async-channel = "1.6"
log = "0.4"
env_logger = "0.9"
tempdir = "0.3"
ico = "0.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
