[package]
name = "pathfinder-wotr-editor"
version = "0.2.0"
authors = ["Francois"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.7", features = ["tokio", "canvas"] }
iced_native = { version = "0.8", features = [] }
iced_lazy = { version = "0.5", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tinyfiledialogs = "3.9"
tokio = { version = "1", features = ["fs", "macros"] }
dirs = "4.0"
async-trait = "0.1"
futures = "0.3"
zip = "0.6"
async-channel = "1.7"
log = "0.4"
env_logger = "0.10"
tempdir = "0.3"
ico = "0.3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
